fix loader y scrollbar

--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -21,7 +21,6 @@
     padding-top: 30px;
     padding-left: 160px;
     padding-right: 100px;
-    margin-bottom: 80px;
     height: 100%;
     background: $color-background;
 
